# ROS2_learn

./: .gitignore  README.md  ROS2指令.md  c++语法特性.md  ros2指令大全.md
chapt1/: 1.py  CMakeLists.txt
chapt2/: CMakeLists.txt.back  ROS2指令.md
chapt2/111/: ros2_cpp_node.cpp  ros2_python_node.py  text_args.cpp
chapt2/chapt2_ws/: novel2.txt  novel3.txt
chapt2/chapt2_ws/install/: local_setup.sh  setup.sh
chapt2/chapt2_ws/log/: latest_build
chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt
chapt2/chapt2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_auto.cpp  learn_funcational.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thead.cpp  person_node.cpp
chapt2/chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
chapt3/: novel1.txt
chapt3/chapt3_ws/install/: local_setup.sh  setup.sh
chapt3/chapt3_ws/log/: latest_build
chapt3/chapt3_ws/src/demo_cpp_topic/: CMakeLists.txt
chapt3/chapt3_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/chapt3_ws/src/demo_python_topic/: setup.py
chapt3/chapt3_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
chapt3/chapt3_ws/src/demo_python_topic/test/: moban.py
chapt3/topic_practice_ws/install/: local_setup.sh  setup.sh
chapt3/topic_practice_ws/log/: latest_build
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt
chapt3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
chapt3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chapt3/topic_practice_ws/src/status_publisher/status_publisher/: sys_statys_pub.py
chapt4/chapt4_ws/src/chapt4_interfaces/: package.xml
chapt4/chapt4_ws/src/chapt4_interfaces/srv/: FaceDetector.srv  Patrol.srv
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  (+1 more)
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
(+26 files in other folders)
